added discussion section

--- a/report.qmd
+++ b/report.qmd
@@ -97,7 +97,12 @@ glance(additive_model)$r.squared
 
 **RESULTS**
 
-After producing the linear regressions and plots, we found a direct, positive correlation between cholesterol content and the number of calories, as well as total carbohydrate levels and the number of calories. This holds among all the fast-food restaurants in this data set, which then seems that this is not just a consumer perception. Furthermore, after looking at the AIC values for each of our models, we found the linear additive model with cholesterol and total carbohydrates as predictors to be the best of the four models with the lowest AIC. This is the equation for that additive model: $\widehat{calories} = 447 - 308*new\_cholesterolLow + 7.10*total\_carb$. We can say that holding all other variables constant, for a one gram increase in total carbohydrates, we estimate a 7.10 kcal increase in mean calories. And, holding all other variables constant, we estimate the mean calories of food with low cholesterol to be 308 kcal less than food with high cholesterol. The $R^2$ value of this interaction model reveals that \~70% of the change in the response variable (calories) is explained by the explanatory variables (total carbohydrate content and cholesterol level).
+After producing the linear regressions and plots, we found a direct, positive correlation between cholesterol content and the number of calories, as well as total carbohydrate levels and the number of calories. This holds among all the fast-food restaurants in this data set, which then seems that this is not just a consumer perception. Furthermore, after looking at the AIC values for each of our models, we found the linear additive model with cholesterol and total carbohydrates as predictors to be the best of the four models with the lowest AIC. This is the equation for that additive model: $\widehat{calories} = 447 - 308*new\_cholesterolLow + 7.10*total\_carb$. We can say that holding all other variables constant, for a one gram increase in total carbohydrates, we estimate a 7.10 kcal increase in mean calories. And, holding all other variables constant, we estimate the mean calories of food with low cholesterol to be 308 kcal less than food with high cholesterol. The $R^2$ value of this interaction model reveals that ~70% of the change in the response variable (calories) is explained by the explanatory variables (total carbohydrate content and cholesterol level).
+
+
+**DISCUSSION**
+
+In response to our question of whether total carbohydrate content or cholesterol level is a better predictor of the amount of calories in food items at eight different fast-food restaurants, we found that cholesterol is a better predictor of total calories, with this model having a lower AIC than the carbohydrates model (6830.847 vs. 6914.045). However, both the additive and interaction model with these two predictors had lower AICs. Our models were somewhat limited in that we only explored two variables as predictors. So, in the future, we could further explore how cholesterol levels can be a predictor of calories and create models that have this variable interact with others beside total carbohydrates, such as sugar, to see if there are even better models for prediction caloric content. Additionally, this dataset only included fast food restaurants, so it might be interesting in the future to conduct research with a wider reaching dataset that includes healthier food options as well. 
 
 **SOURCES**
 
