--- a/report.qmd
+++ b/report.qmd
@@ -23,7 +23,7 @@ Our research question responds to the findings of this article by posing a deepe
 
 First, we will re-level the cholesterol variable to create a qualitative variable that reveals whether the cholesterol is above or below recommended levels (200mg if you are at risk of heart disease and 300mg if you are healthy) (2). We chose our threshold for high cholesterol as 100 mg or above because half of the daily intake of cholesterol in one meal is more than you need, if you are averaging 3 meals per day.
 
-We will then create a both a simple linear regression for both cholesterol and carbohydrates' relationship with calories, and an interactive and additive linear regression model consisting of how the new cholesterol variable and total carbohydrate content effect each other to predict calories for each entree from a specific restaurant. There will be two graphs, each facet-wrapped by restaurant to make sure it is not a confounding variable and simplify our graphs. Creating these models will allow us to make inferences from our data (we cannot make predictions, as our research question does not involve future occurrences), which will help us answer our research question regarding the effect of cholesterol levels and total carbohydrates on the number of calories.
+We will then create a simple linear regression for both cholesterol and carbohydrates' relationship with calories, and an interactive and additive linear regression model consisting of how the new cholesterol variable and total carbohydrate content effect each other to predict calories for each entree from a specific restaurant. There will be two graphs, each facet-wrapped by restaurant to make sure it is not a confounding variable and simplify our graphs. Creating these models will allow us to make inferences from our data (we cannot make predictions, as our research question does not involve future occurrences), which will help us answer our research question regarding the effect of cholesterol levels and total carbohydrates on the number of calories.
 
 ```{r}
 #| label: load_data
@@ -97,14 +97,13 @@ glance(additive_model)$r.squared
 
 **RESULTS**
 
-After producing the linear regressions and plots, we found a direct, positive correlation between cholesterol content and the number of calories, as well as total carbohydrate levels and the number of calories. This holds among all the fast-food restaurants in this data set, which then seems that this is not just a consumer perception. Furthermore, after looking at the AIC values for each of our models, we found the linear additive model with cholesterol and total carbohydrates as predictors to be the best of the four models with the lowest AIC. This is the equation for that additive model: $\widehat{calories} = 447 - 308*new\_cholesterolLow + 7.10*total\_carb$. We can say that holding all other variables constant, for a one gram increase in total carbohydrates, we estimate a 7.10 kcal increase in mean calories. And, holding all other variables constant, we estimate the mean calories of food with low cholesterol to be 308 kcal less than food with high cholesterol. The $R^2$ value of this interaction model reveals that ~70% of the change in the response variable (calories) is explained by the explanatory variables (total carbohydrate content and cholesterol level).
-
+After producing the linear regressions and plots, we found a direct, positive correlation between cholesterol content and the number of calories, as well as total carbohydrate levels and the number of calories. This holds among all the fast-food restaurants in this data set, which then seems that this is not just a consumer perception. Furthermore, after looking at the AIC values for each of our models, we found the linear additive model with cholesterol and total carbohydrates as predictors to be the best of the four models with the lowest AIC. This is the equation for that additive model: $\widehat{calories} = 447 - 308*new\_cholesterolLow + 7.10*total\_carb$. We can say that holding all other variables constant, for a one gram increase in total carbohydrates, we estimate a 7.10 kcal increase in mean calories. And, holding all other variables constant, we estimate the mean calories of food with low cholesterol to be 308 kcal less than food with high cholesterol. The $R^2$ value of this interaction model reveals that \~70% of the change in the response variable (calories) is explained by the explanatory variables (total carbohydrate content and cholesterol level).
 
 **DISCUSSION**
 
-In response to our question of whether total carbohydrate content or cholesterol level is a better predictor of the amount of calories in food items at eight different fast-food restaurants, we found that cholesterol is a better predictor of total calories, with this model having a lower AIC than the carbohydrates model (6830.847 vs. 6914.045). However, both the additive and interaction model with these two predictors had lower AICs. Our models were somewhat limited in that we only explored two variables as predictors. So, in the future, we could further explore how cholesterol levels can be a predictor of calories and create models that have this variable interact with others beside total carbohydrates, such as sugar, to see if there are even better models for prediction caloric content. Additionally, this dataset only included fast food restaurants, so it might be interesting in the future to conduct research with a wider reaching dataset that includes healthier food options as well. 
+In response to our question of whether total carbohydrate content or cholesterol level is a better predictor of the amount of calories in food items at eight different fast-food restaurants, we found that cholesterol is a better predictor of total calories, with this model having a lower AIC than the carbohydrates model (6830.847 vs. 6914.045). However, both the additive and interaction model with these two predictors had lower AICs. Our models were somewhat limited in that we only explored two variables as predictors. So, in the future, we could further explore how cholesterol levels can be a predictor of calories and create models that have this variable interact with others beside total carbohydrates, such as sugar, to see if there are even better models for prediction caloric content. Additionally, this dataset only included fast food restaurants, so it might be interesting in the future to conduct research with a wider reaching dataset that includes healthier food options as well.
 
 **SOURCES**
 
-1.  Fryar CD, Ervin RB. (2013). Caloric intake from fast food among adults: United States, 2007-2010. NCHS data brief, no 114. Hyattsville, MD: National Center for Health Statistics. Retrieved April 23, 2023, from  https://www.cdc.gov/nchs/products/databriefs/db114.htm
-2. UCSF Health. (2023). Cholesterol content of foods. Retrieved April 23, 2023, from https://www.ucsfhealth.org/education/cholesterol-content-of-foods#:\~:text=If%20you%20have%20risk%20factors,than%20300%20milligrams%20a%20day.
+1.  Fryar CD, Ervin RB. (2013). Caloric intake from fast food among adults: United States, 2007-2010. NCHS data brief, no 114. Hyattsville, MD: National Center for Health Statistics. Retrieved April 23, 2023, from https://www.cdc.gov/nchs/products/databriefs/db114.htm
+2.  UCSF Health. (2023). Cholesterol content of foods. Retrieved April 23, 2023, from https://www.ucsfhealth.org/education/cholesterol-content-of-foods#:\~:text=If%20you%20have%20risk%20factors,than%20300%20milligrams%20a%20day.
